--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,8 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #64a7ce;
+    color: #050505;
     padding: 20px;
     text-align: center;
 }
