--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,130 @@
+/********** Estilo basico **********/
+* {
+    box-sizing: border-box;
+    
+}
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif; 
+    background-color: white;
+
 }
 
-header {
-    background-color: #64a7ce;
-    color: #050505;
-    padding: 20px;
-    text-align: center;
-}
+header {     
 
-.section {
-    float: left;
-    width: 100%;
     margin-bottom: 20px;
-    border: 1px solid #000;
-}
-
-.section-header {
+    text-align: center;
+    color: #000000;
+    font-size: 20px;
+    
+}  
+section {
     position: relative;
-    background-color: #f2f2f2;
-    padding: 10px;
-    border-bottom: 1px solid #000;
+    padding: 15px;
+    width: 90%;
+}
+
+p {
+    position: relative;
+    clear: right;
+}
+
+div {
+    position: relative;
+    background-color: gray;
+    border: 2px solid black;
+    width: 100%;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+}
+
+.subt1 {
+    float: right;
+    width: 100px;
+    padding: 5px;
+    margin: -2px -3px 1px;
+    border: 2px solid black;
+    text-align: center;
     font-size: 125%;
+    font-weight: bold;
+    background-color: #1b62e6;
+
 }
 
-.section p {
-    padding: 10px;
+.subt2 {
+    float: right;
+    color: white;
+    width: 100px;
+    padding: 5px;
+    margin: -2px -3px 1px;
+    border: 2px solid black;
+    background-color: #7e1e1e;
+    text-align: center;
+    font-size: 125%;
+    font-weight: bold;
+
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
-    .section {
-        width: 50%;
-    }
+.subt3 {
+    float: right;
+    width: 100px;
+    color: black;
+    padding: 5px;
+    margin: -2px -3px 1px;
+    border: 2px solid black;
+    text-align: center;
+    font-size: 125%;
+    font-weight: bold;
+    background-color: rgb(223, 212, 121);
+
 }
 
-@media (min-width: 992px) {
-    .section {
+.content {
+    padding: 5px;
+    border: none;
+    background-color: gray;
+    color: black;
+    margin: 3px ;
+    height: 150px;
+    overflow: auto;
+}
+
+.row {
+    width: 100%;
+}
+
+
+/********** Large devices only **********/
+    @media (min-width: 992px) {
+    .column-lg-4 {
+        float: left;
         width: 33.33%;
     }
 }
+
+  /********** Medium devices only **********/
+    @media (min-width: 768px) and (max-width: 991px) {
+    .colmn-md-6 {
+        float: left;
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+        }
+
+    .colmn-md-12 {
+        float: left;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        }
+    }
+
+  /********** Small devices only **********/
+    @media (max-width: 767px) {
+    .colmn-sm-12 {
+        float: left;
+        width: 100%;
+        }
+    }
