--- a/css/styles.css
+++ b/css/styles.css
@@ -1,130 +1,42 @@
-/********** Estilo basico **********/
-* {
-    box-sizing: border-box;
-    
+*{
+	margin: 0;
+	padding: 0;
+	
+}
+.navbar{
+
+border: none;
+background-color: rgb(24, 52, 94);
+color: #183c72;
+}
+body{
+	background-color: #133f68;
+	color: white;
+}
+.glyphicon{
+	font-size: 30px;
+	color:#000000; 
 }
 
-body {
-    font-family: Arial, sans-serif; 
-    background-color: white;
+.center{
+	width: 90%;
+	background-color: rgb(179, 173, 175);
 
 }
-
-header {     
-
-    margin-bottom: 20px;
-    text-align: center;
-    color: #000000;
-    font-size: 20px;
-    
-}  
-section {
-    position: relative;
-    padding: 15px;
-    width: 90%;
+.container
+{
+	background-color: rgb(179, 173, 173);
+}
+.text-center{
+	font-size: 35px;
 }
 
-p {
-    position: relative;
-    clear: right;
+h2{
+	text-align: center;
 }
-
-div {
-    position: relative;
-    background-color: gray;
-    border: 2px solid black;
-    width: 100%;
-
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
+#myNavbar ul li a {
+	color: #245cd6;
 }
-
-.subt1 {
-    float: right;
-    width: 100px;
-    padding: 5px;
-    margin: -2px -3px 1px;
-    border: 2px solid black;
-    text-align: center;
-    font-size: 125%;
-    font-weight: bold;
-    background-color: #1b62e6;
-
+.navbar-brand{
+font-size: 40px;	
 }
-
-.subt2 {
-    float: right;
-    color: white;
-    width: 100px;
-    padding: 5px;
-    margin: -2px -3px 1px;
-    border: 2px solid black;
-    background-color: #7e1e1e;
-    text-align: center;
-    font-size: 125%;
-    font-weight: bold;
-
-}
-
-.subt3 {
-    float: right;
-    width: 100px;
-    color: black;
-    padding: 5px;
-    margin: -2px -3px 1px;
-    border: 2px solid black;
-    text-align: center;
-    font-size: 125%;
-    font-weight: bold;
-    background-color: rgb(223, 212, 121);
-
-}
-
-.content {
-    padding: 5px;
-    border: none;
-    background-color: gray;
-    color: black;
-    margin: 3px ;
-    height: 150px;
-    overflow: auto;
-}
-
-.row {
-    width: 100%;
-}
-
-
-/********** Large devices only **********/
-    @media (min-width: 992px) {
-    .column-lg-4 {
-        float: left;
-        width: 33.33%;
-    }
-}
-
-  /********** Medium devices only **********/
-    @media (min-width: 768px) and (max-width: 991px) {
-    .colmn-md-6 {
-        float: left;
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-        }
-
-    .colmn-md-12 {
-        float: left;
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        }
-    }
-
-  /********** Small devices only **********/
-    @media (max-width: 767px) {
-    .colmn-sm-12 {
-        float: left;
-        width: 100%;
-        }
-    }
